# tomeforge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/tomeforge/: __init__.py  cli.py  converter.py  pdf2md.py  service.py
tests/: test_convert.py  test_service.py
