[project]
name = "tomeforge"
version = "0.1.0"
description = "Convert PDFs (and MOBI/AZW/…) into clean, reflowable EPUBs with a linked TOC — Markdown intermediate (PyMuPDF) + Calibre, with optional local-LLM OCR for scanned PDFs."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "hungryend" }]
keywords = ["pdf", "epub", "ebook", "ocr", "calibre", "pymupdf", "ollama", "markdown"]
dependencies = [
    "PyMuPDF>=1.24",
]

[project.scripts]
tomeforge = "tomeforge.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.8", "Pillow>=11.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tomeforge"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Bundled upstream converter — kept verbatim for easy re-sync; don't lint it.
"src/tomeforge/pdf2md.py" = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
